...
    self.tableView.translatesAutoresizingMaskIntoConstraints = NO;
	
	[NSNotificationCenter addObserverOnMainThread:self selector:@selector(reloadTable) name:@"reloadServerList"];
	[NSNotificationCenter addObserverOnMainThread:self selector:@selector(showSaveButton) name:@"showSaveButton"];
	[NSNotificationCenter addObserverOnMainThread:self selector:@selector(switchServer:) name:@"switchServer"];
	
	self.title = @"Servers";
    if (self != [[self.navigationController viewControllers] objectAtIndexSafe:0]) {
		self.navigationItem.leftBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:@"Back" style:UIBarButtonItemStylePlain target:self action:@selector(saveAction:)];
    }
    self.navigationItem.rightBarButtonItem = self.editButtonItem;
	
    if (settingsS.serverList == nil || [settingsS.serverList count] == 0) {
...
        }];
    }
	
    self.segmentControlContainer = [[UIView alloc] init];
    self.segmentControlContainer.translatesAutoresizingMaskIntoConstraints = NO;
    
    self.segmentedControl = [[UISegmentedControl alloc] initWithItems:@[@"Servers", @"Settings"]];
    self.segmentedControl.translatesAutoresizingMaskIntoConstraints = NO;
    [self.segmentedControl addTarget:self action:@selector(segmentAction:) forControlEvents:UIControlEventValueChanged];
    self.segmentedControl.selectedSegmentIndex = 0;

    [self.segmentControlContainer addSubview:self.segmentedControl];
    [self.view addSubview:self.segmentControlContainer];
...
    if (editingStyle == UITableViewCellEditingStyleDelete) {
		// Alert user to select new default server if they deleting the default
		if ([settingsS.urlString isEqualToString:[(ISMSServer *)[settingsS.serverList objectAtIndexSafe:indexPath.row] url]]) {
            if (settingsS.isPopupsEnabled) {
                NSString *message = @"Make sure to select a new server";
                UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Notice" message:message preferredStyle:UIAlertControllerStyleAlert];
                [alert addAction:[UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleCancel handler:nil]];
                [self presentViewController:alert animated:YES completion:nil];
            }
		}
		
        // Delete the row from the data source
        [settingsS.serverList removeObjectAtIndex:indexPath.row];
...
